# Feedbacker

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: GITHUB_ISSUE_AUTOMATION.md
examples/: feedback_client.rs
scripts/: manage.sh  quick-fix.sh  setup-github.sh
src/: config.rs  main.rs
src/api/: auth.rs  feedback.rs  health.rs  issue_hooks.rs  mod.rs  projects.rs  smart_tree.rs  status.rs  web.rs  webhooks.rs
src/auth/: mod.rs
src/database/: migrations.rs  mod.rs  models.rs
src/github/: client.rs  mod.rs  operations.rs  ssh.rs  webhooks.rs
src/jobs/: mod.rs
src/llm/: mod.rs
src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limiting.rs  security.rs
src/models/: mod.rs
src/utils/: mod.rs
